--- a/exercises/ses1/string1.ipynb
+++ b/exercises/ses1/string1.ipynb
@@ -24,12 +24,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of donuts: 5\n",
+      "Number of donuts: many\n",
+      "Number of donuts: many\n"
+     ]
+    }
+   ],
    "source": [
     "def donuts(count):\n",
-    "    return '' "
+    "    if count >= 10:\n",
+    "        return 'Number of donuts: many'\n",
+    "    return 'Number of donuts: ' + str(count)\n",
+    "\n",
+    "# test\n",
+    "print(donuts(5))\n",
+    "print(donuts(10))\n",
+    "print(donuts(23))\n",
+    "\n",
+    "## unit test\n",
+    "\n",
+    "import unittest\n",
+    "\n",
+    "class Test_Donuts(unittest.TestCase):\n",
+    "    def test_donuts(self):\n",
+    "         # Test case 1: count < 10\n",
+    "        self.assertEqual(donuts(5), 'Number of donuts: 5')\n",
+    "        \n",
+    "        # Test case 2: count == 10 (edge case)\n",
+    "        self.assertEqual(donuts(10), 'Number of donuts: many')\n",
+    "        \n",
+    "        \n",
+    "        # Test case 3: count > 10\n",
+    "        self.assertEqual(donuts(11), 'Number of donuts: many')\n",
+    "        \n",
+    "        # Test case 4: count == 0 (edge case)\n",
+    "        self.assertEqual(donuts(0), 'Number of donuts: 0')\n",
+    "\n",
+    "\n",
+    "# Run the tests\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(Test_Donuts))"
    ]
   },
   {
@@ -45,12 +97,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original: spring\n",
+      "parsed: spng\n",
+      "Test case:  0\n",
+      "  spring =>  spng\n",
+      "Test case:  1\n",
+      "   =>  \n",
+      "Test case:  2\n",
+      "  a =>  \n",
+      "Test case:  3\n",
+      "  ab =>  abab\n"
+     ]
+    }
+   ],
    "source": [
+    "original_word = 'spring'\n",
+    "parsed_word = ''\n",
+    "\n",
     "def both_ends(s):\n",
-    "    return ''\n"
+    "    if len(s) < 2:\n",
+    "        return ''\n",
+    "    \n",
+    "    first_two_char = s[:2] # get first two characters, ':nr' means from the beginning\n",
+    "    last_two_char = s[-2:] # get last two characters, '-nr:' means from the end\n",
+    "    return first_two_char + last_two_char\n",
+    "\n",
+    "print('original: '+ original_word)\n",
+    "print('parsed: '+ both_ends(original_word))\n",
+    "\n",
+    "\n",
+    "# test\n",
+    "import unittest\n",
+    "\n",
+    "class Test_Both_ends(unittest.TestCase):\n",
+    "    def test_both_ends(self):\n",
+    "          # Test case 1: Normal case\n",
+    "        self.assertEqual(both_ends('spring'), 'spng')\n",
+    "        \n",
+    "        # Test case 2: Empty string\n",
+    "        self.assertEqual(both_ends(''), '')\n",
+    "        \n",
+    "        # Test case 3: String with one character\n",
+    "        self.assertEqual(both_ends('a'), '')\n",
+    "        \n",
+    "        # Test case 4: String with two characters\n",
+    "        self.assertEqual(both_ends('ab'), 'abab')\n",
+    "\n",
+    "    def test_both_ends_with_array_testcases(self):\n",
+    "        count = 0\n",
+    "        test_cases = [\n",
+    "            ('spring', 'spng'),\n",
+    "            ('', ''),\n",
+    "            ('a', ''),\n",
+    "            ('ab', 'abab')\n",
+    "        ]\n",
+    "\n",
+    "        for input_str, expected_output_str in test_cases:\n",
+    "            with self.subTest(input_str = input_str): # this is used to identify which test case is failing\n",
+    "                print ('Test case: ', count)\n",
+    "                print (' ', input_str, '=> ', expected_output_str)\n",
+    "                count +=1\n",
+    "\n",
+    "                self.assertEqual(both_ends(input_str), expected_output_str)\n",
+    "\n",
+    "\n",
+    "# Run the tests\n",
+    "if __name__ == '__main__':\n",
+    "    suite = unittest.TestLoader().loadTestsFromTestCase(Test_Both_ends)\n",
+    "    unittest.TextTestRunner().run(suite)"
    ]
   },
   {
@@ -64,18 +196,33 @@
     "the first char itself.    \n",
     "e.g. 'babble' yields 'ba**le'    \n",
     "Assume that the string is length 1 or more.    \n",
-    "Hint: s.replace(stra, strb) returns a version of string s    \n",
+    "Hint: s.replace(stra, strb) returns a version of string s    # s.replace\n",
     "where all instances of stra have been replaced by strb.    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ba**le\n"
+     ]
+    }
+   ],
    "source": [
+    "original_word = 'babble'\n",
+    "\n",
     "def fix_start(s):\n",
-    "  return ''"
+    "  first_char = s[:1] # slice from ':' border to :1 first char ('1:' would be first char and end border)\n",
+    "  s = s.replace(first_char, '*') # replace all first_char with '*'\n",
+    "\n",
+    "  return first_char + s[1:]\n",
+    "\n",
+    "print(fix_start(original_word))"
    ]
   },
   {
@@ -94,17 +241,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first set mix pod\n",
+      "  ['pix', 'mod']\n",
+      "second set dog dinner\n",
+      "  ['dog', 'dinner']\n"
+     ]
+    }
+   ],
    "source": [
+    "first_set = ['mix', 'pod']\n",
+    "second_set = ['dog', 'dinner']\n",
+    "\n",
+    "\n",
     "def mix_up(a, b):\n",
-    "    return ''"
+    "    first_char_a = a[:1]\n",
+    "    first_char_b = b[:1]\n",
+    "    b = b.replace(first_char_b, first_char_a)\n",
+    "    a = a.replace(first_char_a, first_char_b)\n",
+    "    return [a,b]\n",
+    "\n",
+    "print('first set', first_set[0], first_set[1])\n",
+    "print(' ',mix_up(first_set[0], first_set[1]))\n",
+    "\n",
+    "print('second set', second_set[0], second_set[1])\n",
+    "print(' ',mix_up(second_set[0], second_set[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -188,10 +360,10 @@
       " OK  got: donut expected: donut\n",
       "\n",
       "mix_up\n",
-      " OK  got: pox mid expected: pox mid\n",
-      " OK  got: dig donner expected: dig donner\n",
-      " OK  got: spash gnort expected: spash gnort\n",
-      " OK  got: fizzy perm expected: fizzy perm\n"
+      "  X  got: ['pix', 'mod'] expected: pox mid\n",
+      "  X  got: ['dog', 'dinner'] expected: dig donner\n",
+      "  X  got: ['snash', 'gport'] expected: spash gnort\n",
+      "  X  got: ['fezzy', 'pirm'] expected: fizzy perm\n"
      ]
     }
    ],
@@ -225,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
